--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
-  text-align: center;
+.fon {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.8;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-family: 'Hubballi', cursive;
+  font-size: 70px;
+  color: #1B1A17;
+  text-shadow: 2px 2px #FFBDE6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-family: 'Hubballi', cursive;
+  font-size: 70px;
+  color: #E04DB0;
+  text-shadow: 2px 2px #1B1A17;
+  display: none;
+  margin-top: -10px;
+  margin-bottom: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  font-family: 'Hubballi', cursive;
+  font-size: 40px;
+  margin-bottom: -10px;
+  font-weight: bold;
+  text-shadow: 1px 1px #EFFFFD;
+  margin-top: 30px;
+}
+
+.addbtn {
+  padding: 5px 50px;
+  font-family: 'Hubballi', cursive;
+  font-size: 40px;
+  cursor: pointer;
+  border: none;
+  font-weight: bold;
+  background-color: #F473B9;
+  border-radius: 15px;
+}
+
+.deletebtn {
+  margin-top: 30px;
+  display: none;
+  padding: 5px 75px;
+  font-family: 'Hubballi', cursive;
+  font-size: 40px;
+  cursor: pointer;
+  border: none;
+  font-weight: bold;
+  background-color: #F473B9;
+  border-radius: 15px;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 15px;
+  margin-right: 56%;
 }
 
-.App-link {
-  color: #61dafb;
+.container-tips {
+  width: 100%;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media all and (max-width: 800px) {
+  .container {
+    margin: 25px 25px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .fon {
+    opacity: 0.7;
+  }
+}
+
+@media all and (max-width: 500px) {
+  h1, h2 {
+    font-size: 45px;
+  }
+
+  p,  button {
+    font-size: 30px;
+  }
+
+  .container {
+    margin: 5px 5px;
+  }
+
+  .fon {
+    opacity: 0.8;
   }
 }
